...
    return Scaffold(
      body: navigationShell,
      bottomNavigationBar: NavigationBar(
        selectedIndex: navigationShell.currentIndex,
        onDestinationSelected: (idx) => _onTabTapped(ref, idx),
        destinations: const [
          NavigationDestination(icon: Icon(Icons.home), label: 'Home'),
          NavigationDestination(
            icon: Icon(Icons.add_link, color: Colors.lightBlue),
            label: 'Link',
          ),
          NavigationDestination(
            icon: Icon(Icons.add_shopping_cart, color: Colors.orange),
            label: 'Purchase',
          ),
          NavigationDestination(
            icon: Icon(Icons.note_add, color: Colors.lightGreen),
            label: 'Note',
          ),
        ],
...
