...
              // >> ThemeMode toggle
              ThemeModeToggle(),
              AppDividerWidget(),
              // >> Tag Management
              ListTile(
                leading: const Icon(Icons.tag),
                title: const Text('Tag Management'),
                trailing: Icon(Icons.subdirectory_arrow_left),
                onTap: () {
                  context.go('/setting/tag');
                },
              ),
              AppDividerWidget(),
              // >> Category Management
              ListTile(
                leading: const Icon(Icons.category),
                title: const Text('Catagory Management'),
                trailing: Icon(Icons.subdirectory_arrow_left),
                onTap: () {
                  context.go('/setting/category');
                },
              ),
            ],
...
